...
        var syllables: String?
    }

    struct Inflection: Codable {
        /// 変化の種類（母語。例:「過去形」）
        var form: String
        /// 変化形（例: "ran"）
        var text: String
    }

    struct Example: Codable {
        var english: String
        /// 母語訳
...
